<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.FoodOrderFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_choose_a_resturan" />

        <Spinner
            android:id="@+id/choose_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Please Choose You Meal" />

        <Spinner
            android:id="@+id/choose_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Please Choose You Drink" />

        <Spinner
            android:id="@+id/choose_drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/order_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/main_btn_height"
                android:layout_margin="5dp"
                android:text="@string/order" />

            <Button
                android:layout_width="wrap_content"
                android:id="@+id/clear_btn"
                android:layout_height="@dimen/main_btn_height"
                android:layout_margin="5dp"
                android:text="@string/clear" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <ImageView
            android:id="@+id/food_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>
</RelativeLayout>

